Bug 693661 - implement HP CLJ 3500/3550/3600 emulation

The actual subject of the bug report is
"pcl6 interpreter exited with error code -995".

This patch adds two new files, pxl/pxvendor.{c,h} which implement
HP CLJ 3500/3550/3600 emulation, plus small associated changes
in existing files.

Included and somewhat less related are:

- a small change of pl/plmain.c to not repeat repeated error messages,
- switching some 12-year-old debug code from '|' (experimental)
    to '|' (interpreter), to make genuine exp code devel easier.
- a minor bug fix to px_attribute_names in
    pxl/pxptable.c reported elsewhere which affects debug messages,
- some stubs in pxl/pxsessio.c and tools/pxldis.py
    for HP 1011/1012/1015 emulation.

Where/what those are should be fairly obvious.

No cluster differences.