gs/base/gdevpxat.h
@@ -106,6 +106,7 @@ typedef enum {
     pxaBlockByteLength,         /* 2.0 */
 
     pxaNumberOfScanLines = 115,
+    pxaPrintableArea = 116,     /* 3.0+ */
 
     pxaColorTreatment = 120,
 
